added to css and html

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,43 @@
 p 	{
-	font-size: 100px;
+	font-size: 40px;
+}
+
+div .eric {
+
+}
+
+div .kyle {
+
+}
+
+div .gracie {
+	
+}
+
+div .davis {
+	
+}
+
+div .elliot {
+	
+}
+
+div .natalie {
+	
+}
+
+div .chey {
+	
+}
+
+div .collin {
+	
+}
+
+div .branden {
+	
+}
+
+div .ben {
+	
 }
